--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Vision" %></title>
+    <title>Vision</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Vision">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="turbo-visit-control" content="reload">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= yield :head %>
-
-    <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
-
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-
-    <%# Includes Tailwind CSS %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-gray-100 text-gray-900">
-    <%= render "shared/navbar" %>
-
-    <div class="flex mt-4">
-      <!-- Sidebar -->
-      <div class="w-64 bg-white p-4 hidden md:block">
-        Sidebar
-      </div>
-
-      <!-- Main feed -->
-      <main class="flex-1 p-6">
+  <body class="bg-gray-50">
+    <%= render 'layouts/header' %>
+    
+    <div class="flex">
+      <%= render 'layouts/sidebar' if logged_in? %>
+      
+      <main class="flex-1 <%= logged_in? ? 'ml-64' : '' %> mt-16 p-6">
+        <% if notice %>
+          <div class="mb-4 bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+            <span class="block sm:inline"><%= notice %></span>
+          </div>
+        <% end %>
+        
+        <% if alert %>
+          <div class="mb-4 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+            <span class="block sm:inline"><%= alert %></span>
+          </div>
+        <% end %>
+        
         <%= yield %>
       </main>
     </div>
